--- a/Numberapp/Base.lproj/Main.storyboard
+++ b/Numberapp/Base.lproj/Main.storyboard
@@ -37,11 +37,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="6Wt-gn-ot6">
+                                <rect key="frame" x="130" y="458" width="210" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="Slidervaluechanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="CFQ-Zr-xRK"/>
+                                    <action selector="randomNumber:" destination="BYZ-38-t0r" eventType="valueChanged" id="oik-Wn-S7u"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="Slider" destination="6Wt-gn-ot6" id="NcP-qX-MAA"/>
                         <outlet property="label" destination="XgK-S3-8RJ" id="cyB-lw-oZ4"/>
                         <outlet property="label2" destination="hHj-dA-qxd" id="Hsa-hD-q61"/>
                     </connections>
